--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
+<html>
 <header>
-        <a href ="home.html" class ="currentlinks">Home</a>
+        <a href ="index.html" class ="currentlinks">Home</a>
         <a href ="about.html" class ="links">About Me</a>
         <a href ="project.html"class ="links">Skills</a>
        
@@ -17,6 +18,6 @@
             <a style="font-size:28px" ng-click="$ctrl.linkedIn()"><i class="fa fa-linkedin-square"></i></a>
             <a style="font-size:28px" ng-click="$ctrl.gitHub()"><i class="fa fa-git-square"></i></a>
     </div>
-  
+  </html>
     
 
