--- a/project.html
+++ b/project.html
@@ -1,5 +1,17 @@
+<html lang="en" ng-app="app">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>ACPortfolio</title>
+</head>
 <header>
-    <a href ="home.html" class = "links">Home</a>
+    <a href ="index.html" class = "links">Home</a>
     <a href ="about.html" class = "links">About Me</a>
     <a href ="project.html"class = "currentlinks">Skills</a>
     </header>  
@@ -46,3 +58,4 @@
     </div>
     </div>
     </div>
+    </html>
