--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <img src = "images/outdoors.jpg" width ="300px" height="300px">
 </div>
 <div class = "spacing">
-<h1>Learning</h1>
+<h1>Advancement</h1>
 <img src = "images/learning.jpg" width ="300px" height="300px">
 </div>
 </div>
